--- a/public/test2.html
+++ b/public/test2.html
@@ -1,6 +1,22 @@
 <head>
     test
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script>
+        if (navigator.geolocation) {
+            navigator.geolocation.getCurrentPosition(function (position) {
+
+                var lat = position.coords.latitude, // 위도
+                    lon = position.coords.longitude; // 경도
+
+                var locPosition = new kakao.maps.LatLng(lat, lon)
+                pharmacy(lat, lon)
+
+            });
+
+        } else {
+            alert("위치 정보를 얻어는데 실패했습니다.")
+        }
+    </script>
 </head>
 
 
@@ -12,55 +28,44 @@
 
     <script>
 
-        var status;
-
         var map = new kakao.maps.Map(document.getElementById('map'), { // 지도를 표시할 div
             center: new kakao.maps.LatLng(33.450701, 126.570667), // 지도의 중심좌표 
             level: 14 // 지도의 확대 레벨 
         });
+        function pharmacy(lat, lng) {
+            var loc = "?lat=" + lat + "&lng=" + lng + "&m=5000";
+            var url = "https://8oi9s0nnth.apigw.ntruss.com/corona19-masks/v1/storesByGeo/json" + loc
+            $.ajax({
+                type: "GET",
+                url: url,
+                dataType: "json",
+                success: function (data) {
+                    $.each(data.stores, function (i, stores) {
+                        var name = stores.name;
+                        var status = stores.remain_stat
+                        var position = new kakao.maps.LatLng(stores.lat, stores.lng);
+                        var marker = new kakao.maps.Marker({
+                            map: map,
+                            position: position,
+                            clickable: true
+                        });
+                        var iwContent = '<div style="padding:5px;">'+name+'</div><br>'+ status +'</br>', // 인포윈도우에 표출될 내용으로 HTML 문자열이나 document element가 가능합니다
+                            iwRemoveable = true; // removeable 속성을 ture 로 설정하면 인포윈도우를 닫을 수 있는 x버튼이 표시됩니다
 
-        $.ajax({
-            type: "GET",
-            url: "https://8oi9s0nnth.apigw.ntruss.com/corona19-masks/v1/sales/json",
-            dataType: "json",
-            success: function (data) {
-                $.each(data.sales, function (i, sales) {
-                    console.log(sales.code)
-                    $.get("/data/pharmacy.json", function (data) {
-                        $.each(data.position, function (i, position) {
-                            var loc = new kakao.maps.LatLng(position.lat, position.lng);
-                            var marker = new kakao.maps.Marker({
-                                map: map,
-                                position: loc
-                            })
-                            if (sales.code == position.code) {
-                                console.log(sales.code + ": " + position.name);
-                                status = sales.remain_stat
-                            } else {
-                                status = "정보 없음"
-                            }
-                            var iwContent = '<div style="padding:5px;">' + position.name + '</div> <p>' + status + '</p>', // 인포윈도우에 표출될 내용으로 HTML 문자열이나 document element가 가능합니다
-                                iwRemoveable = true; // removeable 속성을 ture 로 설정하면 인포윈도우를 닫을 수 있는 x버튼이 표시됩니다
+                        // 인포윈도우를 생성합니다
+                        var infowindow = new kakao.maps.InfoWindow({
+                            content: iwContent,
+                            removable: iwRemoveable
+                        });
 
-                            // 인포윈도우를 생성합니다
-                            var infowindow = new kakao.maps.InfoWindow({
-                                content: iwContent,
-                                removable: iwRemoveable
-                            });
-
-                            // 마커에 클릭이벤트를 등록합니다
-                            kakao.maps.event.addListener(marker, 'click', function () {
-                                // 마커 위에 인포윈도우를 표시합니다
-                                infowindow.open(map, marker);
-                            });
-                        })
+                        // 마커에 클릭이벤트를 등록합니다
+                        kakao.maps.event.addListener(marker, 'click', function () {
+                            infowindow.open(map, marker);
+                        });
                     })
-                })
-            },
-            error: function (xhr, status, error) {
-                console.log(error)
-            }
-        })
+                }
+            })
+        }
     </script>
 
 </body>
