--- a/public/test2.html
+++ b/public/test2.html
@@ -12,13 +12,17 @@
         src="//dapi.kakao.com/v2/maps/sdk.js?appkey=d21bba611d5b2617ceca0bb656175c49"></script>
 
     <script>
+        var map = new kakao.maps.Map(document.getElementById('map'), { // 지도를 표시할 div
+            center: my_loc, // 지도의 중심좌표 
+            level: 2 // 지도의 확대 레벨 
+        });
 
         if (navigator.geolocation) {
             navigator.geolocation.getCurrentPosition(function (position) {
 
                 var lat = position.coords.latitude, // 위도
                     lon = position.coords.longitude; // 경도
-
+                map.setCenter(new kakao.maps.LatLng(lat, lon));
                 pharmacy(lat, lon);
 
             });
@@ -30,11 +34,6 @@
         function pharmacy(lat, lng) {
             var my_loc = new kakao.maps.LatLng(lat, lng);
 
-            var map = new kakao.maps.Map(document.getElementById('map'), { // 지도를 표시할 div
-                center: my_loc, // 지도의 중심좌표 
-                level: 2 // 지도의 확대 레벨 
-            });
-
             var imageSrc = '/images/my_loc.jpg', // 마커이미지의 주소입니다    
                 imageSize = new kakao.maps.Size(64, 69), // 마커이미지의 크기입니다
                 imageOption = { offset: new kakao.maps.Point(27, 69) }; // 마커이미지의 옵션입니다. 마커의 좌표와 일치시킬 이미지 안에서의 좌표를 설정합니다.
@@ -45,7 +44,6 @@
                 map: map,
                 position: my_loc
             })
-            map.panTo(my_loc);
             var loc = "?lat=" + lat + "&lng=" + lng + "&m=5000";
             var url = "https://8oi9s0nnth.apigw.ntruss.com/corona19-masks/v1/storesByGeo/json" + loc
             $.ajax({
